smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/invalid-trait-bytetextblock-key.smithy
// Syntax error at line 6, column 11: Expected RPAREN(')') but found COLON(':') | Model
namespace smithy.example

@externalDocumentation(
    b"""
    Foo""": "bar")
string MyString
